--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa 06</title>
-    <script src="/lib/ol7/ol.js"></script>
-    <link rel="stylesheet" href="/lib/ol7/ol.css">
+    <script src="../lib/ol7/ol.js"></script>
+    <link rel="stylesheet" href="../lib/ol7/ol.css">
     <link rel="stylesheet" href="estilo.css">
-    <script src="/lib/ol7/ol-layerswitcher.js"></script>
-    <link rel="stylesheet" href="/lib/ol7/ol-layerswitcher.css">
+    <script src="../lib/ol7/ol-layerswitcher.js"></script>
+    <link rel="stylesheet" href="../lib/ol7/ol-layerswitcher.css">
 </head>
 <body>
     <div id="map"></div>
